gitops/base/agent/agent-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-eval-agent-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: canary-eval-agent
    component: rl-agent
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30623
