gitops/base/agent/linkerd-prom-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: prometheus-allow-all
  namespace: linkerd-viz
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: prometheus-admin
  allow:
  - unauthenticated:
      subnets:
      - cidr: 0.0.0.0/0
